--- a/cryptopals.cabal
+++ b/cryptopals.cabal
@@ -1,38 +1,46 @@
--- This file has been generated from package.yaml by hpack version 0.28.2.
+cabal-version: 1.12
+
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 911fc3a83eee0446d8f17315e3d1946d81330c2b75c558c109fbf725ae62ebca
+-- hash: 6a1a76f0762243b30b5b3eb182ac5f1f000b863066257afcd69aca1e661236d5
 
 name:           cryptopals
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/cryptopals#readme>
-homepage:       https://github.com/githubuser/cryptopals#readme
-bug-reports:    https://github.com/githubuser/cryptopals/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2020 Author name here
+description:    Please see the README on GitHub at <https://github.com/nwest/cryptopals#readme>
+homepage:       https://github.com/nwest/cryptopals#readme
+bug-reports:    https://github.com/nwest/cryptopals/issues
+author:         nwest
+maintainer:     nwestr@gmail.com
+copyright:      2020 Nate West
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
-cabal-version:  >= 1.10
 extra-source-files:
-    ChangeLog.md
     README.md
+    ChangeLog.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/cryptopals
+  location: https://github.com/nwest/cryptopals
 
 library
   exposed-modules:
       Lib
+      Set1
   other-modules:
       Paths_cryptopals
   hs-source-dirs:
       src
+  default-extensions: OverloadedStrings
+  ghc-options: -Wall
   build-depends:
-      base >=4.7 && <5
+      base
+    , base16-bytestring
+    , base64-bytestring
+    , bytestring
+    , containers
   default-language: Haskell2010
 
 executable cryptopals-exe
@@ -41,9 +49,10 @@ executable cryptopals-exe
       Paths_cryptopals
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions: OverloadedStrings
+  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base
     , cryptopals
   default-language: Haskell2010
 
@@ -54,8 +63,12 @@ test-suite cryptopals-test
       Paths_cryptopals
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions: OverloadedStrings
+  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base
+    , bytestring
     , cryptopals
+    , tasty
+    , tasty-hspec
   default-language: Haskell2010
