cleanup and part of ch 11

--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,8 @@ library:
   - base64-bytestring
   - base16-bytestring
   - HsOpenSSL
+  - mwc-random
+  - vector
   source-dirs: src
 
 executables:
