--- a/cryptopals.cabal
+++ b/cryptopals.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 93a21eb8f06a472663dfa1169873ce87229ed8eb952e711571c270ef4cb7622b
+-- hash: f592bc4b608af699a8efc8b2fe3570e8cf241ee80767236ac43110c977ecaf04
 
 name:           cryptopals
 version:        0.1.0.0
@@ -44,6 +44,8 @@ library
     , base64-bytestring
     , bytestring
     , containers
+    , mwc-random
+    , vector
   default-language: Haskell2010
 
 executable cryptopals-exe
