--- a/package.yaml
+++ b/package.yaml
@@ -33,9 +33,9 @@ library:
   - bytestring
   - base64-bytestring
   - base16-bytestring
-  - HsOpenSSL
   - mwc-random
   - vector
+  - SimpleAES
   source-dirs: src
 
 executables:
