--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,8 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- SimpleAES-0.4.2@sha256:d24c06a82f246071192bbcc62f8e12c531fbd70f5482a71568b797b66f6dfa60,1436
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
